# escola-api-drf-v-2

./: README.md  pyproject.toml
escola/: serializer.py
escola/migrations/: 0001_initial.py  0002_aluno_celular.py
scripts/: seed.py
setup/: settings.py
