[tool.poetry]
name = "escola-api-drf-v-2"
version = "0.1.0"
description = ""
authors = ["Danilo Costa <danilo.barbosa@fapce.edu.br>"]

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "3.3.1"
Django = "3.1.3"
djangorestframework = "3.12.2"
Faker = "4.14.2"
python-dateutil = "2.8.1"
pytz = "2020.4"
six = "1.15.0"
sqlparse = "0.4.1"
text-unidecode = "1.3"
validate-docbr = "1.8.2"
python-decouple = "^3.4"
black = "^21.6b0"
flake8 = "^3.9.2"
mypy = "^0.910"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
| migrations
)/
'''

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
exclude = "setup/|manage.py|migrations/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
